Edited sign up page and added string ressources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">On Demand Home Repair Services</string>
+    <string name="app_name">Sign Up Page</string>
+    <string name="name_textview">Name</string>
+    <string name="signup_textview"> Sign Up</string>
+    <string name="name_first_edittext_hint">(Please Enter Your First Name)</string>
+    <string name="name_last_edittext_hint">(Please Enter Your Last Name)</string>
+    <string name="name_first_edittext">First</string>
+    <string name="name_last_edittext">Last Name</string>
+    <string name="username_edittext">Username</string>
+    <string name="password_edittext">Password</string>
+    <string name="signup_button">Sign Up</string>
 </resources>
