--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="type_homeowner">home owner</string>
     <string name="type_serviceprovider">service provider</string>
     <string name="type">Type of User</string>
+    <string name="welcome_textview">Welcome</string>
+    <string name="or_textview">or</string>
 </resources>
