If admin you can now see list of users

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sign Up P</string>
+    <string name="app_name">On Demand Home Repair</string>
     <string name="name_section">Name</string>
     <string name="credentials_section">Credentials</string>
     <string name="first_name_editText_hint">First</string>
