Added Sign Out button on the home activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="welcome_textview">Welcome</string>
     <string name="or_textview">or</string>
     <string name="placeholder">Placeholder</string>
+    <string name="sign_out_button">Sign Out</string>
 </resources>
