--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="type">Type of User</string>
     <string name="welcome_textview">Sign In</string>
     <string name="or_textview">or</string>
-    <string name="placeholder">Home</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
     <string name="sign_out_button">Sign Out</string>
     <string name="services">Services</string>
     <string name="service_name">Service</string>
