--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="welcome_textview">Sign In</string>
     <string name="or_textview">or</string>
     <string name="home">Home</string>
-    <string name="settings">Settings</string>
+    <string name="Profile">Profile</string>
     <string name="sign_out_button">Sign Out</string>
     <string name="services">Services</string>
     <string name="service_name">Service</string>
