Added both dialogs for rates and comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="company_name_editText">Company Name</string>
     <string name="description_editText">General Description</string>
     <string name="isLicensed">Licensed</string>
+    <string name="cancel_dialog">Cancel</string>
     <string-array name="services_array">
         <item>Appliance Installation</item>
         <item>Carpet Cleaning</item>
